force-app/main/default/objects/tdc_tra__Rollup_Detail__c/tdc_tra__Rollup_Detail__c.object-meta.xml
<CustomObject>
    <label>Rollup Detail</label>
    <nameField>
        <label>Rollup Detail Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Rollup Details</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>