force-app/main/default/objects/tdc_tra__Rollup_Detail__c/fields/tdc_tra__Active__c.field-meta.xml
<CustomField>
    <fullName>tdc_tra__Active__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Active</label>
    <type>Checkbox</type>
</CustomField>