force-app/main/default/objects/tdc_tra__Rollup_Detail__c/fields/tdc_tra__Cross_Child_data_Type__c.field-meta.xml
<CustomField>
    <fullName>tdc_tra__Cross_Child_data_Type__c</fullName>
    <label>Cross Child data Type</label>
    <length>255</length>
    <type>Text</type>
</CustomField>