force-app/main/default/objects/tdc_tra__Rollup_Detail__c/fields/tdc_tra__Description__c.field-meta.xml
<CustomField>
    <fullName>tdc_tra__Description__c</fullName>
    <label>Description</label>
    <type>TextArea</type>
</CustomField>