force-app/main/default/objects/tdc_tra__Rollup_Detail__c/fields/tdc_tra__Formula_Criteria__c.field-meta.xml
<CustomField>
    <fullName>tdc_tra__Formula_Criteria__c</fullName>
    <formula>tdc_tra__Filtered_Field__c &amp; &quot; &quot; &amp; tdc_tra__Operator__c &amp; &quot; &quot; &amp; tdc_tra__Criteria__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Formula Criteria</label>
    <type>Text</type>
</CustomField>