force-app/main/default/objects/tdc_tra__Rollup_Detail__c/fields/tdc_tra__Logic__c.field-meta.xml
<CustomField>
    <fullName>tdc_tra__Logic__c</fullName>
    <label>Logic</label>
    <length>100</length>
    <type>Text</type>
</CustomField>