force-app/main/default/objects/tdc_tra__Rollup_Detail__c/fields/tdc_tra__LogicFormula__c.field-meta.xml
<CustomField>
    <fullName>tdc_tra__LogicFormula__c</fullName>
    <formula>IF( tdc_tra__Logic__c == &apos;Count&apos; ,&apos;CNT&apos; , 
 IF(tdc_tra__Logic__c == &apos;Maximum&apos;, &apos;MAX&apos;, 
 IF(tdc_tra__Logic__c == &apos;Minimum&apos;, &apos;MIN&apos;, 
 IF(tdc_tra__Logic__c == &apos;Average&apos;, &apos;AVG&apos;, 
 IF(tdc_tra__Logic__c == &apos;Sum&apos;, &apos;SUM&apos;, 
 IF(tdc_tra__Logic__c == &apos;Count Distinct&apos;, &apos;CNTDSTNCT&apos;, 
 IF(tdc_tra__Logic__c == &apos;Text Separated By:&apos;, &apos;TXT&apos;, 
 IF(tdc_tra__Logic__c == &apos;Checkbox&apos;, &apos;CBX&apos;, null) ) ) ) ) ) ) )</formula>
    <label>Logic</label>
    <type>Text</type>
</CustomField>