force-app/main/default/objects/tdc_tra__Rollup_Detail__c/fields/tdc_tra__Operator__c.field-meta.xml
<CustomField>
    <fullName>tdc_tra__Operator__c</fullName>
    <label>Operator</label>
    <length>50</length>
    <type>Text</type>
</CustomField>