force-app/main/default/objects/tdc_tra__Rollup_Detail__c/fields/tdc_tra__Parent_Data_Type__c.field-meta.xml
<CustomField>
    <fullName>tdc_tra__Parent_Data_Type__c</fullName>
    <label>Parent Data Type</label>
    <length>100</length>
    <type>Text</type>
</CustomField>