force-app/main/default/objects/tdc_tra__Rollup_Detail__c/fields/tdc_tra__Relationship_Detail__c.field-meta.xml
<CustomField>
    <fullName>tdc_tra__Relationship_Detail__c</fullName>
    <label>Relationship Detail</label>
    <length>255</length>
    <type>Text</type>
</CustomField>