force-app/main/default/objects/tdc_tra__Rollup_Detail__c/fields/tdc_tra__RollupDescription__c.field-meta.xml
<CustomField>
    <fullName>tdc_tra__RollupDescription__c</fullName>
    <label>Description</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>