force-app/main/default/objects/tdc_tra__Rollup_Detail__c/fields/tdc_tra__Source__c.field-meta.xml
<CustomField>
    <fullName>tdc_tra__Source__c</fullName>
    <label>Source Field</label>
    <length>255</length>
    <type>Text</type>
</CustomField>