force-app/main/default/objects/tdc_tra__Rollup_Detail__c/fields/tdc_tra__Target_Field__c.field-meta.xml
<CustomField>
    <fullName>tdc_tra__Target_Field__c</fullName>
    <label>Target Field</label>
    <length>255</length>
    <type>Text</type>
</CustomField>