force-app/main/default/objects/tdc_tra__Rollup_Detail__c/fields/tdc_tra__Text_Separator__c.field-meta.xml
<CustomField>
    <fullName>tdc_tra__Text_Separator__c</fullName>
    <label>Text Separator</label>
    <length>100</length>
    <type>Text</type>
</CustomField>