force-app/main/default/objects/tdc_tra__Rollup_Detail__c/listViews/tdc_tra__All.listView-meta.xml
<ListView>
    <fullName>tdc_tra__All</fullName>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>